--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@graphql-codegen/typescript": "^2.4.8",
     "@graphql-codegen/typescript-graphql-request": "^4.4.5",
     "@graphql-codegen/typescript-operations": "^2.3.5",
+    "@tailwindcss/forms": "^0.5.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/formidable": "^2.0.5",
